# field-lab-ansible-portfolio

./: .ansible-lint  .gitignore  .yamllint  AGENTS.md  CLAUDE.md  ERRORS.md  LICENSE  MEMORY.md  Makefile  NOTES.md  README.md  ansible.cfg  pyproject.toml  site.yml  validation_report.md
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/playbooks/: bootstrap.yml  dev_tooling.yml  dr_test.yml  hardening.yml  monitoring.yml  network.yml  storage.yml
ansible/roles/base_hardening/defaults/: main.yml
ansible/roles/base_hardening/handlers/: main.yml
ansible/roles/base_hardening/tasks/: main.yml
ansible/roles/dr_test/defaults/: main.yml
ansible/roles/dr_test/tasks/: main.yml
ansible/roles/gitlab/defaults/: main.yml
ansible/roles/gitlab/tasks/: main.yml
ansible/roles/gitlab_runner/defaults/: main.yml
ansible/roles/gitlab_runner/tasks/: main.yml
ansible/roles/jupyter/defaults/: main.yml
ansible/roles/jupyter/handlers/: main.yml
ansible/roles/jupyter/tasks/: main.yml
ansible/roles/monitoring/defaults/: main.yml
diagrams/: ARCHITECTURE.txt
docs/: RUNBOOKS.md  design.md
docs/runbooks/: README.md  gitlab-outage-recovery.md
group_vars/: all.yml  infra.yml  runners.yml  workstations.yml
group_vars/infra/: vars.yml  vault.yml
group_vars/runners/: vars.yml  vault.yml
host_vars/: gitlab.yml
inventories/: lab.ini
tests/: conftest.py  test_cicd.py  test_config.py  test_inventory_config.py  test_makefile.py  test_molecule_config.py  test_property_idempotency.py  test_property_inventory_parsing.py  test_property_variable_substitution.py
(+34 files in other folders)
